# project_1_rumyancev_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: __init__.py.  constants.py  main.py  player_actions.py  utils.py
